--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -44,9 +44,10 @@ jobs:
           message='Automated documentation update'
           # Add / update and commit
           git add */**/README.md
-          git commit -m 'Automated documentation update [skip ci]' || export NO_UPDATES=true
+          git commit -m 'Automated documentation update' || export NO_UPDATES=true
           # Push
           if [ "$NO_UPDATES" != "true" ] ; then
               git push origin "$branch"
               gh pr create --title "$message" --body "$message"
+              gh pr merge --auto --squash --delete-branch
           fi
