--- a/src/shfmt/devcontainer-feature.json
+++ b/src/shfmt/devcontainer-feature.json
@@ -1,6 +1,6 @@
 {
   "id": "shfmt",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "name": "shfmt",
   "documentationURL": "https://github.com/nikaro/devcontainer-features/tree/main/src/shfmt",
   "description": "Install shfmt, a shell formatter.",
@@ -12,6 +12,13 @@
         "3.6.0"
       ],
       "type": "string"
+    }
+  },
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "foxundermoon.shell-format"
+      ]
     }
   },
   "installsAfter": [
