--- a/src/shfmt/devcontainer-feature.json
+++ b/src/shfmt/devcontainer-feature.json
@@ -1,6 +1,6 @@
 {
   "id": "shfmt",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "name": "shfmt",
   "documentationURL": "https://github.com/nikaro/devcontainer-features/tree/main/src/shfmt",
   "description": "Install shfmt, a shell formatter.",
@@ -17,7 +17,8 @@
   "customizations": {
     "vscode": {
       "extensions": [
-        "foxundermoon.shell-format"
+        "foxundermoon.shell-format",
+        "mads-hartmann.bash-ide-vscode"
       ]
     }
   },
