--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
 
       - uses: actions/checkout@v3
 
-      - name: "Install latest devcontainer CLI"
+      - name: Install latest devcontainer CLI
         run: npm install -g @devcontainers/cli
 
       - name: Running tests
