--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -39,11 +39,11 @@ jobs:
           git config --global user.email github-actions@github.com
           git config --global user.name github-actions
           git config pull.rebase false
-          branch=automated-documentation-update-$GITHUB_RUN_ID
-          git checkout -b $branch
+          branch="automated-documentation-update-$GITHUB_RUN_ID"
+          git checkout -b "$branch"
           message='Automated documentation update'
           # Add / update and commit
-          git add */**/README.md
+          git add -- */**/README.md
           git commit -m 'Automated documentation update' || export NO_UPDATES=true
           # Push
           if [ "$NO_UPDATES" != "true" ] ; then
