--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,13 @@ name: CI
 on:
   push:
     branches: [ main ]
+    paths:
+      - src/**
+      - test/**
   pull_request:
+    paths:
+      - src/**
+      - test/**
   workflow_dispatch:
 
 jobs:
