--- a/src/dind/devcontainer-feature.json
+++ b/src/dind/devcontainer-feature.json
@@ -1,6 +1,6 @@
 {
   "id": "dind",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "name": "docker-in-docker",
   "documentationURL": "https://github.com/nikaro/devcontainer-features/tree/main/src/dind",
   "description": "",
@@ -31,6 +31,9 @@
   ],
   "entrypoint": "/dockerd-entrypoint.sh",
   "privileged": true,
+  "containerEnv": {
+    "DOCKER_BUILDKIT": "1"
+  },
   "mounts": [
     {
       "source": "dind-var-lib-docker-${devcontainerId}",
