--- a/src/dind/devcontainer-feature.json
+++ b/src/dind/devcontainer-feature.json
@@ -1,6 +1,6 @@
 {
   "id": "dind",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "name": "docker-in-docker",
   "documentationURL": "https://github.com/nikaro/devcontainer-features/tree/main/src/dind",
   "description": "",
@@ -18,6 +18,14 @@
       "description": "Version to install. If not specified, the latest version will be installed.",
       "proposals": [
         "0.10.4"
+      ],
+      "type": "string"
+    },
+    "compose_version": {
+      "default": "",
+      "description": "Version to install. If not specified, the latest version will be installed.",
+      "proposals": [
+        "2.18.1"
       ],
       "type": "string"
     },
