--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,14 +2,13 @@ name: CD
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
     paths:
       - src/**
       - test/**
   workflow_dispatch:
 
 jobs:
-
   deploy:
     name: Release
     if: github.ref_name == 'main'
@@ -19,8 +18,8 @@ jobs:
       pull-requests: write
       packages: write
     steps:
-
-      - uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # v4
+      - name: Checkout
+        uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # v4
 
       - name: Publish Features
         uses: devcontainers/action@3f8cae6bc8e5ef6d58062d7c5cc471d81e8ded05 # v1
@@ -32,9 +31,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create PR for Documentation
-        id: push_image_info
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           set -e
           echo "Start."
@@ -44,13 +40,15 @@ jobs:
           git config pull.rebase false
           branch="automated-documentation-update-$GITHUB_RUN_ID"
           git checkout -b "$branch"
-          message='Automated documentation update'
+          message='docs: automated update'
           # Add / update and commit
           git add -- */**/README.md
-          git commit -m 'Automated documentation update' || export NO_UPDATES=true
+          git commit -m "$message" || export NO_UPDATES=true
           # Push
           if [ "$NO_UPDATES" != "true" ] ; then
               git push origin "$branch"
               gh pr create --title "$message" --body "$message"
               gh pr merge --auto --squash --delete-branch
           fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
