--- a/src/ansible/devcontainer-feature.json
+++ b/src/ansible/devcontainer-feature.json
@@ -1,6 +1,6 @@
 {
   "id": "ansible",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "name": "ansible",
   "documentationURL": "https://github.com/nikaro/features/tree/main/src/ansible",
   "description": "Ansible is an open source community project sponsored by Red Hat, it's the simplest way to automate IT.",
@@ -23,6 +23,14 @@
       "description": "Path to the ansible home directory.",
       "proposals": [
         "/usr/local/ansible"
+      ],
+      "type": "string"
+    },
+    "ansible_dependencies": {
+      "default": "",
+      "description": "Additionnal dependencies to install in the virtualenv.",
+      "proposals": [
+        "ansible-lint,requests"
       ],
       "type": "string"
     }
