--- a/src/ansible/devcontainer-feature.json
+++ b/src/ansible/devcontainer-feature.json
@@ -1,6 +1,6 @@
 {
   "id": "ansible",
-  "version": "1.2.1",
+  "version": "1.3.1",
   "name": "ansible",
   "documentationURL": "https://github.com/nikaro/features/tree/main/src/ansible",
   "description": "Ansible is an open source community project sponsored by Red Hat, it's the simplest way to automate IT.",
@@ -22,9 +22,15 @@
       "proposals": ["/usr/local/ansible"],
       "type": "string"
     },
+    "requirements": {
+      "default": "curl,jq,libffi-dev,python3-venv",
+      "description": "Required distribution packages.",
+      "proposals": ["curl,jq,libffi-dev,python3-dev"],
+      "type": "string"
+    },
     "dependencies": {
       "default": "",
-      "description": "Additionnal dependencies to install in the virtualenv.",
+      "description": "Additional dependencies to install in the virtualenv.",
       "proposals": ["ansible-lint,requests"],
       "type": "string"
     }
