--- a/src/ansible/devcontainer-feature.json
+++ b/src/ansible/devcontainer-feature.json
@@ -1,6 +1,6 @@
 {
   "id": "ansible",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "name": "ansible",
   "documentationURL": "https://github.com/nikaro/features/tree/main/src/ansible",
   "description": "Ansible is an open source community project sponsored by Red Hat, it's the simplest way to automate IT.",
@@ -44,5 +44,8 @@
     "ghcr.io/devcontainers/features/python",
     "ghcr.io/nikaro/features/packages",
     "ghcr.io/nikaro/features/pyenv"
+  ],
+  "mounts": [
+    { "source": "${localWorkspaceFolder}", "target": "/repo", "type": "bind" }
   ]
 }
