--- a/src/pre-commit/devcontainer-feature.json
+++ b/src/pre-commit/devcontainer-feature.json
@@ -1,7 +1,7 @@
 {
   "id": "pre-commit",
   "name": "pre-commit",
-  "version": "2.0.3",
+  "version": "2.1.0",
   "documentationURL": "https://github.com/nikaro/features/tree/main/src/pre-commit",
   "description": "A framework for managing and maintaining multi-language pre-commit hooks.",
   "options": {
@@ -10,6 +10,11 @@
       "description": "Version to install. If not specified, the latest version will be installed.",
       "proposals": ["3.3.1"],
       "type": "string"
+    },
+    "debug": {
+      "default": false,
+      "description": "Enable debug logging.",
+      "type": "boolean"
     }
   },
   "installsAfter": [
