--- a/src/pipx/devcontainer-feature.json
+++ b/src/pipx/devcontainer-feature.json
@@ -1,7 +1,7 @@
 {
   "id": "pipx",
   "name": "pipx",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "Installs a pipx package.",
   "documentationURL": "http://github.com/nikaro/features/tree/main/src/pipx",
   "options": {
@@ -10,6 +10,11 @@
       "proposals": ["latest"],
       "default": "latest",
       "description": "Select the version of pipx to install."
+    },
+    "debug": {
+      "default": false,
+      "description": "Enable debug logging.",
+      "type": "boolean"
     }
   },
   "installsAfter": [
