--- a/src/python/devcontainer-feature.json
+++ b/src/python/devcontainer-feature.json
@@ -1,14 +1,14 @@
 {
   "id": "python",
   "name": "python",
-  "version": "1.0.10",
+  "version": "2.0.0",
   "documentationURL": "https://github.com/nikaro/features/tree/main/src/python",
   "description": "Python installation.",
   "options": {
     "python_version": {
-      "default": "",
+      "default": "3.12",
       "description": "Python version to install. Defaults to the latest version available.",
-      "proposals": ["3.11", "3.9.6"],
+      "proposals": ["3.11", "3.9"],
       "type": "string"
     },
     "debug": {
