fix: print extracted files

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -17,9 +17,14 @@
   "features": {
     "ghcr.io/nikaro/features/actionlint": {},
     "ghcr.io/nikaro/features/devcontainer-cli": {},
+    "ghcr.io/nikaro/features/python:2": {},
     "ghcr.io/nikaro/features/pre-commit": {},
     "ghcr.io/nikaro/features/shellcheck": {},
     "ghcr.io/nikaro/features/shfmt": {}
+  },
+  "postCreateCommand": {
+    "create-cache": "mkdir -p /home/vscode/.cache/pre-commit",
+    "chown-cache": "sudo chown -R vscode:vscode /home/vscode/.cache"
   },
   "mounts": [
     {
