--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -17,14 +17,12 @@
   "features": {
     "ghcr.io/nikaro/features/actionlint": {},
     "ghcr.io/nikaro/features/devcontainer-cli": {},
-    "ghcr.io/nikaro/features/pre-commit": {
-      "debug": true
-    },
+    "ghcr.io/nikaro/features/pre-commit": {},
     "ghcr.io/nikaro/features/shellcheck": {},
     "ghcr.io/nikaro/features/shfmt": {}
   },
   "postCreateCommand": {
-    "create-cache": "mkdir -p /home/vscode/.cache",
+    "create-cache": "mkdir -p /home/vscode/.cache/pre-commit",
     "chown-cache": "sudo chown -R vscode:vscode /home/vscode/.cache"
   },
   "mounts": [
@@ -39,9 +37,9 @@
       "type": "bind"
     },
     {
-      "source": "${localEnv:HOME}/.cache/pre-commit",
+      "source": "pre-commit-cache",
       "target": "/home/vscode/.cache/pre-commit",
-      "type": "bind"
+      "type": "volume"
     }
   ]
 }
