--- a/src/pre-commit/devcontainer-feature.json
+++ b/src/pre-commit/devcontainer-feature.json
@@ -1,7 +1,7 @@
 {
   "id": "pre-commit",
   "name": "pre-commit",
-  "version": "2.1.4",
+  "version": "2.2.0",
   "documentationURL": "https://github.com/nikaro/features/tree/main/src/pre-commit",
   "description": "A framework for managing and maintaining multi-language pre-commit hooks.",
   "options": {
@@ -17,6 +17,17 @@
       "type": "boolean"
     }
   },
+  "postCreateCommand": {
+    "create-cache": "mkdir -p /home/vscode/.cache/pre-commit",
+    "chown-cache": "sudo chown -R vscode:vscode /home/vscode/.cache"
+  },
+  "mounts": [
+    {
+      "source": "pre-commit-cache",
+      "target": "/home/vscode/.cache/pre-commit",
+      "type": "volume"
+    }
+  ],
   "installsAfter": [
     "ghcr.io/nikaro/features/packages",
     "ghcr.io/nikaro/features/pipx",
