--- a/src/go-package/devcontainer-feature.json
+++ b/src/go-package/devcontainer-feature.json
@@ -1,7 +1,7 @@
 {
   "id": "go-package",
   "name": "go-package",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Installs a go package.",
   "documentationURL": "http://github.com/nikaro/features/tree/main/src/go-package",
   "options": {
@@ -16,6 +16,11 @@
       "proposals": ["latest"],
       "default": "latest",
       "description": "Select the version of the go package to install."
+    },
+    "keep": {
+      "default": false,
+      "description": "Do not remove nanolayer.",
+      "type": "boolean"
     },
     "debug": {
       "default": false,
