--- a/src/go-pkg-gopls/devcontainer-feature.json
+++ b/src/go-pkg-gopls/devcontainer-feature.json
@@ -1,7 +1,7 @@
 {
   "id": "go-pkg-gopls",
   "name": "go-pkg-gopls",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "documentationURL": "https://github.com/nikaro/features/tree/main/src/go-pkg-gopls",
   "description": "The Go language server.",
   "options": {
@@ -10,6 +10,11 @@
       "description": "Version to install. If not specified, the latest version will be installed.",
       "proposals": ["v0.14.2"],
       "type": "string"
+    },
+    "keep": {
+      "default": false,
+      "description": "Do not remove nanolayer.",
+      "type": "boolean"
     },
     "debug": {
       "default": false,
