--- a/src/direnv/devcontainer-feature.json
+++ b/src/direnv/devcontainer-feature.json
@@ -1,7 +1,7 @@
 {
   "id": "direnv",
   "name": "direnv",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "documentationURL": "https://github.com/nikaro/features/tree/main/src/direnv",
   "description": "Go installation.",
   "options": {
@@ -20,7 +20,7 @@
   "mounts": [
     {
       "source": "direnv-cache",
-      "target": "/home/vscode/.local/share/direnv/allow",
+      "target": "/home/vscode/.local/share/direnv",
       "type": "volume"
     }
   ],
