--- a/src/direnv/devcontainer-feature.json
+++ b/src/direnv/devcontainer-feature.json
@@ -1,7 +1,7 @@
 {
   "id": "direnv",
   "name": "direnv",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "documentationURL": "https://github.com/nikaro/features/tree/main/src/direnv",
   "description": "Go installation.",
   "options": {
@@ -16,6 +16,10 @@
       "description": "Enable debug logging.",
       "type": "boolean"
     }
+  },
+  "postCreateCommand": {
+    "create-cache": "mkdir -p /home/vscode/.local/share/direnv",
+    "chown-cache": "sudo chown -R vscode:vscode /home/vscode/.local"
   },
   "mounts": [
     {
